Re-align buttons on the stopwatch

--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,7 @@ body{
    font-size: 1.5em;
    width: 5em;
    height: 5em;
-   background: green;
+   background: #032f03;
    margin: 1em;
    border-radius: 100%;
    box-shadow: inset 0px 0px 0px 3px white;
